recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:1: error: identifier expected but ')' found.
override def run() { avance(100.)
                                ^FourSquare:2: error: identifier expected but ')' found.
                        gauche(90.)
                                  ^FourSquare:3: error: identifier expected but ')' found.
                        avance(100.)
                                   ^